add folder 2 desu

--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
         <title>MY CSTU PASSPORT</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="beepbeep.css">
+        <link rel="stylesheet" href="css/beepbeep.css">
     </head>
 
     <body>
         <header>
-            <a href="https://www.youtube.com/watch?v=i0RCcSBPjuU" target="_blank"><img src="Head2.png" width="100%" alt="My CSTU PASSPORT"></a>
+            <a href="https://www.youtube.com/watch?v=i0RCcSBPjuU" target="_blank"><img src="image/Head2.png" width="100%" alt="My CSTU PASSPORT"></a>
         </header>
         <ul class="navb">
             <li><a href="#Home">&nbsp;HOMEPAGE&nbsp;</a> | </li>
@@ -31,13 +31,13 @@
 
         <div class="row">
             <div class="column left">
-                <img src="IMG_0109.JPG" width=100% height=100%>
+                <img src="image/IMG_0109.JPG" width=100% height=100%>
                 <br>
                 <br>
                 <div class="social">
-                    <a href="https://instagram.com/daesn__/" target="_blank"><img src="Instagram_icon.webp" ></a>
-                    <a href="https://www.facebook.com/Sdntnbp" target="_blank"><img src="Facebook_logo.png" width="30" height="30"></a>
-                    <a href="https://open.spotify.com/user/egegr6bmn1azejz12q8g6l54i?si=8852f565f8074db4" target="_blank"><img src="Spotify_App_Logo.png" width="30" height="30"></a>
+                    <a href="https://instagram.com/daesn__/" target="_blank"><img src="image/Instagram_icon.webp" ></a>
+                    <a href="https://www.facebook.com/Sdntnbp" target="_blank"><img src="image/Facebook_logo.png" width="30" height="30"></a>
+                    <a href="https://open.spotify.com/user/egegr6bmn1azejz12q8g6l54i?si=8852f565f8074db4" target="_blank"><img src="image/Spotify_App_Logo.png" width="30" height="30"></a>
                 </div>
             </div>
             <div class="column middle">
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="column right">
-                <video src="export_1693801840588 (1).mov" width="370" height="220" controls></video>
+                <video src="VDO/export_1693801840588 (1).mov" width="370" height="220" controls></video>
             </div>
         </div> 
     </div>
