--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
             <a href="https://www.youtube.com/watch?v=i0RCcSBPjuU" target="_blank"><img src="image/Head2.png" width="100%" alt="My CSTU PASSPORT"></a>
         </header>
         <ul class="navb">
-            <li><a href="#Home">&nbsp;HOMEPAGE&nbsp;</a> | </li>
-            <li><a href="#Advisor">&nbsp;ADVISOR&nbsp;</a></li>
-            <li> | <a href="#Act">&nbsp;ACTIVITIES&nbsp;</a></li>
+            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/index.html">&nbsp;HOMEPAGE&nbsp;</a> | </li>
+            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myActivities.html">&nbsp;ADVISOR&nbsp;</a></li>
+            <li> | <a href="/My-CSTU-Passport/html/myActivities.html">&nbsp;ACTIVITIES&nbsp;</a></li>
         </ul>
     <div class="detail">
         <div class="hello"> 
@@ -36,8 +36,8 @@
                 <br>
                 <div class="social">
                     <a href="https://instagram.com/daesn__/" target="_blank"><img src="image/Instagram_icon.webp" ></a>
-                    <a href="https://www.facebook.com/Sdntnbp" target="_blank"><img src="image/Facebook_logo.png" width="30" height="30"></a>
-                    <a href="https://open.spotify.com/user/egegr6bmn1azejz12q8g6l54i?si=8852f565f8074db4" target="_blank"><img src="image/Spotify_App_Logo.png" width="30" height="30"></a>
+                    <a href="https://www.facebook.com/Sdntnbp" target="_blank"><img src="image/Facebook_logo.png"></a>
+                    <a href="https://open.spotify.com/user/egegr6bmn1azejz12q8g6l54i?si=8852f565f8074db4" target="_blank"><img src="image/Spotify_App_Logo.png"></a>
                 </div>
             </div>
             <div class="column middle">
