--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
         </header>
         <ul class="navb">
             <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/index.html">&nbsp;HOMEPAGE&nbsp;</a> | </li>
-            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myActivities.html">&nbsp;ADVISOR&nbsp;</a></li>
-            <li> | <a href="/My-CSTU-Passport/html/myActivities.html">&nbsp;ACTIVITIES&nbsp;</a></li>
+            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myAdvisor.html">&nbsp;ADVISOR&nbsp;</a></li>
+            <li> | <a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myActivities.html">&nbsp;ACTIVITIES&nbsp;</a></li>
         </ul>
     <div class="detail">
         <div class="hello"> 
