--- a/html/myAdvisor.html
+++ b/html/myAdvisor.html
@@ -13,7 +13,7 @@
         </header>
         <ul class="navb">
             <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/index.html">&nbsp;HOMEPAGE&nbsp;</a> | </li>
-            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myAdvisor.html">&nbsp;ADVISOR&nbsp;</a></li>
+            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myAdvisor">&nbsp;ADVISOR&nbsp;</a></li>
             <li> | <a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myActivities.html">&nbsp;ACTIVITIES&nbsp;</a></li>
         </ul>
         
