--- a/html/myActivities.html
+++ b/html/myActivities.html
@@ -12,7 +12,27 @@
             <a href="https://www.youtube.com/watch?v=hb73cGFLzKk" target="_blank"><img src="../image/Head2.png" width="100%" alt="My CSTU PASSPORT"></a>
         </header>
         <ul class="navb">
-            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/index.html">&nbsp;HOMEPAGE&nbsp;</a> | </li>
-            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myActivities.html">&nbsp;ADVISOR&nbsp;</a></li>
-            <li> | <a href="/My-CSTU-Passport/html/myActivities.html">&nbsp;ACTIVITIES&nbsp;</a></li>
+            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/index.html" target="_parent">&nbsp;HOMEPAGE&nbsp;</a> | </li>
+            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myAdvisor" target="_parent">&nbsp;ADVISOR&nbsp;</a></li>
+            <li> | <a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myActivities.html" target="_parent">&nbsp;ACTIVITIES&nbsp;</a></li>
         </ul>
+
+            <div class ="title">
+                <h2>MY ACTIVITIES</h2> 
+            </div>
+            <div class="row">
+                <div class="column act">
+                    <img src="../image/IMG_3037.jpeg" width=100% height=100%>
+                    <h3>CSTU38 First meet</h3>
+                </div>
+                <div class="column act">
+                    <img src="../image/IMG_3035.jpeg" width=100% height=100%>
+                    <h3>CSTU38 First meet</h3>
+                </div>
+                <div class="column act">
+                    <img src="../image/IMG_3036.jpeg"width= 100% height=100%>
+                    <h3>CSTU38 First meet</h3>
+                </div>
+            </div>
+    </body>
+</html
