--- a/html/myActivities.html
+++ b/html/myActivities.html
@@ -27,11 +27,11 @@
                 </div>
                 <div class="column act">
                     <img src="../image/IMG_3035.jpeg" width=100% height=100%>
-                    <h3>CSTU38 First meet</h3>
+                    <h3>Orientation CSTU 2023</h3>
                 </div>
                 <div class="column act">
                     <img src="../image/IMG_3036.jpeg"width= 100% height=100%>
-                    <h3>CSTU38 First meet</h3>
+                    <h3>Thammasart Orientation 2023</h3>
                 </div>
             </div>
     </body>
