--- a/html/Thammasart-Orientation-2023.html
+++ b/html/Thammasart-Orientation-2023.html
@@ -16,3 +16,10 @@
             <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myAdvisor" target="_parent">&nbsp;ADVISOR&nbsp;</a></li>
             <li> | <a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myActivities.html" target="_parent">&nbsp;ACTIVITIES&nbsp;</a></li>
         </ul>
+        <div class="title">
+            <h2>Thammasart Orientation 2023</h2>
+            <img src="../image/IMG_3036.jpeg" width="550">
+        </div>
+
+    </body>
+</html>
