change name m to M TT

--- a/html/CSTU38-First-meet.html
+++ b/html/CSTU38-First-meet.html
@@ -9,16 +9,16 @@
 
     <body>
         <header>
-            <a href="https://www.youtube.com/watch?v=hb73cGFLzKk" target="_blank"><img src="../image/Head2.png" width="100%" alt="My CSTU PASSPORT"></a>
+            <a href="https://www.youtube.com/watch?v=hb73cGFLzKk" alt="Welcome to MYCSTUPassport" target="_blank"><img src="../image/Head2.png" width="100%" alt="My CSTU PASSPORT"></a>
         </header>
         <ul class="navb">
-            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/index.html" target="_parent">&nbsp;HOMEPAGE&nbsp;</a> | </li>
-            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myAdvisor" target="_parent">&nbsp;ADVISOR&nbsp;</a></li>
-            <li> | <a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myActivities.html" target="_parent">&nbsp;ACTIVITIES&nbsp;</a></li>
+            <li><a href="https://imnotsunday.github.io/MyCSTUPassport-6609681314/index.html" target="_parent">&nbsp;HOMEPAGE&nbsp;</a> | </li>
+            <li><a href="https://imnotsunday.github.io/MyCSTUPassport-6609681314/html/myAdvisor" target="_parent">&nbsp;ADVISOR&nbsp;</a></li>
+            <li> | <a href="https://imnotsunday.github.io/MyCSTUPassport-6609681314/html/myActivities.html" target="_parent">&nbsp;ACTIVITIES&nbsp;</a></li>
         </ul>
         <div class="title">
             <h2>CSTU38 First Meet</h2>
-            <img src="../image/IMG_3037.jpeg" width="550">
+            <img src="../image/IMG_3037.jpeg" alt="CSTU38 First Meet" width="550">
         </div>
 
     </body>
