--- a/html/myActivities.html
+++ b/html/myActivities.html
@@ -9,19 +9,19 @@
 
     <body>
         <header>
-            <a href="https://www.youtube.com/watch?v=hb73cGFLzKk" target="_blank"><img src="../image/Head2.png" width="100%" alt="My CSTU PASSPORT"></a>
+            <a href="https://www.youtube.com/watch?v=hb73cGFLzKk" alt="Welcome to MYCSTUPassport" target="_blank"><img src="../image/Head2.png" width="100%" alt="My CSTU PASSPORT"></a>
         </header>
         <ul class="navb">
-            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/index.html" target="_parent">&nbsp;HOMEPAGE&nbsp;</a> | </li>
-            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myAdvisor" target="_parent">&nbsp;ADVISOR&nbsp;</a></li>
-            <li> | <a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myActivities.html" target="_parent">&nbsp;ACTIVITIES&nbsp;</a></li>
+            <li><a href="https://imnotsunday.github.io/MyCSTUPassport-6609681314/index.html" target="_parent">&nbsp;HOMEPAGE&nbsp;</a> | </li>
+            <li><a href="https://imnotsunday.github.io/MyCSTUPassport-6609681314/html/myAdvisor" target="_parent">&nbsp;ADVISOR&nbsp;</a></li>
+            <li> | <a href="https://imnotsunday.github.io/MyCSTUPassport-6609681314/html/myActivities.html" target="_parent">&nbsp;ACTIVITIES&nbsp;</a></li>
         </ul>
             <div class="activitydetail">
                 <h2>MY ACTIVITIES</h2> 
               <ul>
-                <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/CSTU38-First-meet.html">&nbsp;CSTU38 First meet&nbsp;</a></li>
-                <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/Orientation-CSTU-2023.html">&nbsp;Orientation CSTU 2023&nbsp;</a></li>
-                <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/Thammasart-Orientation-2023.html">&nbsp;Thammasart Orientation 2023&nbsp;</a></li>
+                <li><a href="https://imnotsunday.github.io/MyCSTUPassport-6609681314/html/CSTU38-First-meet.html" target="_parent">&nbsp;CSTU38 First meet&nbsp;</a></li>
+                <li><a href="https://imnotsunday.github.io/MyCSTUPassport-6609681314/html/Orientation-CSTU-2023.html" target="_parent">&nbsp;Orientation CSTU 2023&nbsp;</a></li>
+                <li><a href="https://imnotsunday.github.io/MyCSTUPassport-6609681314/html/Thammasart-Orientation-2023.html" target="_parent">&nbsp;Thammasart Orientation 2023&nbsp;</a></li>
               </ul>  
             </div>
             </div>
