--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 
     <body>
         <header>
-            <a href="https://www.youtube.com/watch?v=i0RCcSBPjuU" target="_blank"><img src="image/Head2.png" width="100%" alt="My CSTU PASSPORT"></a>
+            <a href="https://www.youtube.com/watch?v=i0RCcSBPjuU" alt="Welcome to MYCSTUPassport" target="_blank"><img src="image/Head2.png" width="100%" alt="My CSTU PASSPORT"></a>
         </header>
         <ul class="navb">
-            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/index.html">&nbsp;HOMEPAGE&nbsp;</a> | </li>
-            <li><a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myAdvisor.html">&nbsp;ADVISOR&nbsp;</a></li>
-            <li> | <a href="https://imnotsunday.github.io/myCSTUPassport-6609681314/html/myActivities.html">&nbsp;ACTIVITIES&nbsp;</a></li>
+            <li><a href="https://imnotsunday.github.io/MyCSTUPassport-6609681314/index.html" target="_parent">&nbsp;HOMEPAGE&nbsp;</a> | </li>
+            <li><a href="https://imnotsunday.github.io/MyCSTUPassport-6609681314/html/myAdvisor" target="_parent">&nbsp;ADVISOR&nbsp;</a></li>
+            <li> | <a href="https://imnotsunday.github.io/MyCSTUPassport-6609681314/html/myActivities.html" target="_parent">&nbsp;ACTIVITIES&nbsp;</a></li>
         </ul>
     <div class="detail">
         <div class="hello"> 
@@ -35,9 +35,9 @@
                 <br>
                 <br>
                 <div class="social">
-                    <a href="https://instagram.com/daesn__/" target="_blank"><img src="image/Instagram_icon.webp" ></a>
-                    <a href="https://www.facebook.com/Sdntnbp" target="_blank"><img src="image/Facebook_logo.png"></a>
-                    <a href="https://open.spotify.com/user/egegr6bmn1azejz12q8g6l54i?si=8852f565f8074db4" target="_blank"><img src="image/Spotify_App_Logo.png"></a>
+                    <a href="https://instagram.com/daesn__/" target="_blank"><img src="image/Instagram_icon.webp" alt="My Insta"></a>
+                    <a href="https://www.facebook.com/Sdntnbp" target="_blank"><img src="image/Facebook_logo.png" alt="My Facebook"></a>
+                    <a href="https://open.spotify.com/user/egegr6bmn1azejz12q8g6l54i?si=8852f565f8074db4" target="_blank"><img src="image/Spotify_App_Logo.png" alt="My Spotify"></a>
                 </div>
             </div>
             <div class="column middle">
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <div class="column right">
-                <video src="VDO/export_1693801840588 (1).mov" width="370" height="220" controls></video>
+                <video src="VDO/export_1693801840588 (1).mov" width="370" height="220" alt="Introducing Myself" controls></video>
             </div>
         </div> 
     </div>
